[package]
name = "tachyonic"
version = "0.0.1"
authors = ["Dustin Bensing <dustin.bensing@googlemail.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "A simple software rendering library written in rust"

# These URLs point to more information about the repository.
#documentation = "..."
#homepage = "..."
repository = "https://github.com/pythoneer/tachyonic"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
#readme = "..."

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["renderer", "3D"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "MIT"

# If a project is using a nonstandard license, then this key may be specified in
# lieu of the above key and must point to a file relative to this manifest
# (similar to the readme key).
#license-file = "..."

[dependencies]
orbclient = "0.2.11"
orbimage = "0.1.11"
nalgebra = "0.10.*"

#[profile.release]
#debug = true